crates/analyzer/tests/snapshots/errors__duplicate_field_in_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: a struct field with the same name already exists
  ┌─ compile_errors/duplicate_field_in_struct.fe:2:5
  │
2 │     foo: u8
  │     ^^^^^^^ First definition of field `foo`
3 │     foo: u8
  │     ^^^^^^^ Conflicting definition of field `foo`
  │
  = Note: Give one of the `foo` fields a different name


